# flashcards-tui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  flashcard_schema.yaml  flashcard_statistics.py  flashcard_types.py  flashcards.py  flashcards.yaml  io_operations.py  main.py  pyproject.toml  requirements.txt  study_session.py  test_flashcards.py  test_functional_flashcards.py  ui.py
.github/workflows/: test.yml
flashcard_sets/: README.md  data_structures_algorithms_advanced_flashcards.yaml  data_structures_algorithms_basics_flashcards.yaml  git_basics_flashcards.yaml  javascript_advanced_flashcards.yaml  javascript_basic_flashcards.yaml  javascript_flashcards.yaml  postgresql_advanced_flashcards.yaml  postgresql_basics_flashcards.yaml  postgresql_flashcards.yaml  programming_terminology_flashcards.yaml  python_advanced_flashcards.yaml  python_basic_flashcards.yaml  python_flashcards.yaml  shell_basics_flashcards.yaml
src/: __init__.py  __version__.py
src/core/: __init__.py  session.py  statistics.py  types.py
src/io/: __init__.py  operations.py
src/ui/: __init__.py  interface.py
tests/: __init__.py  test_functional.py
